Fixing the FileTransferControllerSpecIt